--- a/style_desktop.css
+++ b/style_desktop.css
@@ -5,6 +5,7 @@
     }
 
     body {
+        height: 100%;
         margin: 0;
         background-color: #DEE2E6;
     }
@@ -88,7 +89,7 @@
 
     .title>a {
         text-decoration: none;
-        font-size: 5em;
+        font-size: 2em;
         color: #212529;
     }
 
@@ -116,36 +117,19 @@
         background-color: #E9ECEF;
     }
 
-    .presentation_content>p {
-        font-size: 2em;
+    .presentation_txt {
+        font-size: 1.5em;
         color: #212529;
         padding-left: 5%;
         padding-right: 5%;
         text-align: justify;
     }
 
-    /*----- MON CV -----*/
-
-    .cv>h1 {
-        margin: 0;
-        font-size: 5em;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
-    .cv_content {
-        display: flex;
-        align-items: center;
+    .download_btn {
+        text-align: center;
+        width: 50%;
         margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 5%;
-        justify-content: space-around;
-    }
-
-    .cv_content>img {
-        height: 70vh;
-        border: solid 1px #343A40;
+        top: 5vh;
     }
 
     /*----- BUTTON ANIMATION CV -----*/
@@ -159,7 +143,7 @@
 
     .cv a {
         display: block;
-        width: 20%;
+        width: 50%;
         height: 40px;
         line-height: 40px;
         font-size: 18px;
@@ -588,6 +572,7 @@
     /*----- CONTACT -----*/
 
     .contact {
+        width: 100%;
         margin-bottom: 10%;
     }
 
@@ -605,29 +590,34 @@
         color: #212529;
     }
 
-    .contact_detail {
-        padding-left: 5%;
-        padding-top: 5%;
-        display: flex;
+    .contact>a>img {
+        width: 10%;
         align-items: center;
-        font-size: 2em;
     }
 
-    .contact_detail>a {
-        padding-left: 2%;
+    .contacts {
+        width: 100%;
+        text-align: center;
     }
 
-    .contact_detail>img {
-        width: 5%;
+    .contacts>a>img {
+       width: 10%;
+       margin-top: 5%;
+       margin-left: 10%;
+       margin-right: 10%;
     }
 
     /*----- FOOTER -----*/
     footer {
+        width: 100%;
+        left: 0;
+        bottom: 0;
         background-color: #212529;
         color: #F8F9FA;
         font-size: 1em;
         text-align: center;
-        padding: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
     }
 
 }
