--- a/style_mobile.css
+++ b/style_mobile.css
@@ -132,7 +132,7 @@
         color: #212529;
         font-size: 2em;
         text-align: center;
-        padding-top: 80%;
+        padding-top: 40vh;
     }
 
     .title>h1 {
@@ -147,7 +147,7 @@
 
     .title>a {
         text-decoration: none;
-        font-size: 5em;
+        font-size: 2em;
         color: #212529;
     }
 
@@ -183,30 +183,13 @@
         text-align: justify;
     }
 
-    /*----- MON CV -----*/
-
-    .cv>h1 {
-        margin: 0;
-        font-size: 2em;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 15vh;
+    .cv {
+        justify-content: center;
+        display: flex;
     }
 
-    .cv_content {
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 5%;
-    }
-
-    .cv_content>img {
+    .download_btn {
         width: 100%;
-        border: solid 1px #343A40;
-    }
-
-    .cv_content>.download_btn {
-        width: 80%;
-        margin-left: 10%;
         top: 5vh;
     }
 
@@ -220,8 +203,9 @@
     }
 
     .cv a {
+        text-align: center;
         display: block;
-        width: 20%;
+        width: 50%;
         height: 40px;
         line-height: 40px;
         font-size: 18px;
@@ -614,15 +598,16 @@
     /*----- CONTACT -----*/
 
     .contact {
+        width: 100%;
         margin-bottom: 10%;
     }
 
     .contact>h1 {
         margin: 0;
-        font-size: 2em;
+        font-size: 5em;
         color: #212529;
         padding-left: 5%;
-        padding-top: 15vh;
+        padding-top: 6%;
     }
 
     .contact>p {
@@ -631,24 +616,28 @@
         color: #212529;
     }
 
-    .contact_detail {
-        padding-left: 5%;
-        padding-top: 5%;
-        display: flex;
+    .contact>a>img {
+        width: 10%;
         align-items: center;
-        font-size: 2em;
     }
 
-    .contact_detail>a {
-        padding-left: 2%;
+    .contacts {
+        width: 100%;
+        text-align: center;
     }
 
-    .contact_detail>img {
-        width: 5%;
+    .contacts>a>img {
+       width: 10%;
+       margin-top: 5%;
+       margin-left: 10%;
+       margin-right: 10%;
     }
 
     /*----- FOOTER -----*/
     footer {
+        width: 100%;
+        left: 0;
+        bottom: 0;
         background-color: #212529;
         color: #F8F9FA;
         font-size: 1em;
