--- a/style_tablet.css
+++ b/style_tablet.css
@@ -24,7 +24,7 @@
         left: 0;
         z-index: 999999;
         transition: .5s;
-        background: #212529;
+        background: #0553B1;
     }
 
     .ulMobile {
@@ -46,7 +46,7 @@
     .menuBurgerBackground {
         width: 100%;
         height: 10vh;
-        background-color: #212529;
+        background-color: #0553B1;
         text-align: center;
         position: fixed;
         z-index: 2;
@@ -182,7 +182,7 @@
         text-align: justify;
     }
 
-    .cv {
+    .download_btn {
         justify-content: center;
         display: flex;
     }
@@ -201,9 +201,8 @@
         transform: translate(-50%, -50%);
     }
 
-    .cv a {
+    .download_btn a {
         display: block;
-        width: 50%;
         height: 40px;
         line-height: 40px;
         font-size: 18px;
@@ -218,27 +217,27 @@
         text-transform: uppercase;
     }
 
-    .cv a span {
+    .download_btn a span {
         position: relative;
         z-index: 1;
     }
 
-    .cv a:after {
+    .download_btn a:after {
         position: absolute;
         content: "";
         top: 0;
         left: 0;
         width: 0;
         height: 100%;
-        background: #212529;
+        background: #027DFD;
         transition: all .35s;
     }
 
-    .cv a:hover {
+    .download_btn a:hover {
         color: #F8F9FA;
     }
 
-    .cv a:hover:after {
+    .download_btn a:hover:after {
         width: 100%;
     }
 
@@ -359,11 +358,6 @@
         top: 20%;
     }
 
-    .flip-card-content>p {
-        margin: 10%;
-        text-align: justify;
-    }
-
     .experience_btn {
         background-color: #343A40;
         font-weight: bold;
@@ -409,10 +403,6 @@
 
     .matex_logos>img {
         width: 100%;
-    }
-
-    .container {
-        text-align: center;
     }
 
     .roll_up_img {
@@ -481,22 +471,6 @@
         filter: drop-shadow(30px 10px 4px #212529);
     }
 
-    /*----- ZOOMER SUR LES IMAGES -----*/
-
-    input[type=checkbox] {
-        display: none;
-    }
-
-    .container img {
-        transition: transform 0.25s ease;
-        cursor: zoom-in;
-    }
-
-    input[type=checkbox]:checked~label>img {
-        transform: scale(3);
-        cursor: zoom-out;
-    }
-
     /*----- CONTACT -----*/
 
     .contact {
@@ -540,7 +514,7 @@
         width: 100%;
         left: 0;
         bottom: 0;
-        background-color: #212529;
+        background-color: #0553B1;
         color: #F8F9FA;
         font-size: 1em;
         text-align: center;
