--- a/style_mobile.css
+++ b/style_mobile.css
@@ -24,7 +24,7 @@
         left: 0;
         z-index: 999999;
         transition: .5s;
-        background: #212529;
+        background: #0553B1;
     }
 
     .ulMobile {
@@ -47,7 +47,7 @@
     .menuBurgerBackground {
         width: 100%;
         height: 10vh;
-        background-color: #212529;
+        background-color: #0553B1;
         text-align: center;
         position: fixed;
         z-index: 2;
@@ -183,14 +183,11 @@
         text-align: justify;
     }
 
-    .cv {
-        justify-content: center;
-        display: flex;
-    }
-
     .download_btn {
         width: 100%;
         top: 5vh;
+        justify-content: center;
+        display: flex;
     }
 
     /*----- BUTTON ANIMATION CV -----*/
@@ -202,10 +199,9 @@
         transform: translate(-50%, -50%);
     }
 
-    .cv a {
+    .download_btn a {
         text-align: center;
         display: block;
-        width: 50%;
         height: 40px;
         line-height: 40px;
         font-size: 18px;
@@ -220,27 +216,27 @@
         text-transform: uppercase;
     }
 
-    .cv a span {
+    .download_btn a span {
         position: relative;
         z-index: 1;
     }
 
-    .cv a:after {
+    .download_btn a:after {
         position: absolute;
         content: "";
         top: 0;
         left: 0;
         width: 0;
         height: 100%;
-        background: #212529;
+        background: #027DFD;
         transition: all .35s;
     }
 
-    .cv a:hover {
+    .download_btn a:hover {
         color: #F8F9FA;
     }
 
-    .cv a:hover:after {
+    .download_btn a:hover:after {
         width: 100%;
     }
 
@@ -350,11 +346,6 @@
         top: 20%;
     }
 
-    .flip-card-content>p {
-        margin: 10%;
-        text-align: justify;
-    }
-
     .experience_btn {
         background-color: #343A40;
         font-weight: bold;
@@ -400,10 +391,6 @@
 
     .matex_logos>img {
         width: 100%;
-    }
-
-    .container {
-        text-align: center;
     }
 
     .roll_up_img {
@@ -471,12 +458,6 @@
         margin-bottom: 2.5vh;
     }
 
-    /*----- ZOOMER SUR LES IMAGES -----*/
-
-    input[type=checkbox] {
-        display: none;
-    }
-
     /*----- CONTACT -----*/
 
     .contact {
@@ -520,7 +501,7 @@
         width: 100%;
         left: 0;
         bottom: 0;
-        background-color: #212529;
+        background-color: #0553B1;
         color: #F8F9FA;
         font-size: 1em;
         text-align: center;
