--- a/style_mobile.css
+++ b/style_mobile.css
@@ -258,22 +258,45 @@
         padding-left: 5%;
         padding-top: 15vh;
     }
-
+    
+    .competences_content {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 5%;
+    }
+    
     .competence {
+        flex: 1 0 41%;
         text-align: center;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-        margin-left: 10%;
-        margin-right: 10%;
+        align-content: center;
+        margin: 1%;
+        width: 200px;
+        height: 300px;
+        border-radius: 2%;
+        background-color: whitesmoke;
+    }
+
+    .competence:hover {
+        box-shadow: 
+        rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px,
+        rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px,
+        rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
 
     .competence>img {
-        width: 150px;
-        height: 150px;
-        padding: 5%;
-        border-radius: 10%;
-        border: 2px solid #212529;
-        background-color: #E9ECEF;
+        width: 30%;
+    }
+
+    .skill_img {
+        align-items: center;
+        align-content: center;
+        height: 50%;
+    }
+
+    .skill_img>img {
+        width: 30%;
     }
 
     /*----- EXPERIENCES -----*/
