MAJ menu mobile

--- a/style_desktop.css
+++ b/style_desktop.css
@@ -39,6 +39,7 @@
         font-weight: bold;
         color: #F8F9FA;
         width: 12em;
+        height: 1px;
         display: inline-block;
     }
 
