--- a/style_tablet.css
+++ b/style_tablet.css
@@ -49,9 +49,9 @@
         font-size: 1.5rem;
         padding: 30px;
         text-decoration: none;
-        /* font-weight: bold; */
         color: #F8F9FA;
         width: 12em;
+        height: 1px;
         display: inline-block;
     }
 
