--- a/style_mobile.css
+++ b/style_mobile.css
@@ -10,7 +10,7 @@
     }
 
     h1 {
-        font-size: 3em;
+        font-size: 2.5em;
     }
 
     h2 {
@@ -49,9 +49,9 @@
         font-size: 1.5rem;
         padding: 30px;
         text-decoration: none;
-        /* font-weight: bold; */
         color: #F8F9FA;
         width: 12em;
+        height: 1px;
         display: inline-block;
         animation-delay: 2s;
     }
@@ -142,7 +142,7 @@
 
     .title {
         color: #212529;
-        font-size: 2em;
+        font-size: 1em;
         text-align: center;
         padding-top: 40vh;
     }
