--- a/style_mobile.css
+++ b/style_mobile.css
@@ -51,7 +51,6 @@
         text-decoration: none;
         color: #F8F9FA;
         width: 12em;
-        height: 1px;
         display: inline-block;
         animation-delay: 2s;
     }
@@ -299,7 +298,7 @@
         width: 30%;
     }
 
-     /*----- EXPERIENCES & PROJETS -----*/
+     /*----- MES PROJETS -----*/
 
      .projects>h1 {
         margin: 0;
@@ -308,13 +307,9 @@
         padding-top: 6%;
     }
 
-    .experience_img>img {
+    .project_img>img {
         width: 30%;
         border-radius: 50%;
-    }
-
-    .experiences_content {
-        margin-top: 1%;
     }
 
     .project {
@@ -347,83 +342,6 @@
         width: 30%;
     }
 
-    /*----- EXPERIENCES FLIP CARD -----*/
-
-    /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-    .flip-card {
-        margin: 15%;
-        background-color: transparent;
-        width: 70%;
-        height: 350px;
-        perspective: 1000px;
-        margin-top: 25%;
-        /* Remove this if you don't want the 3D effect */
-    }
-
-    /* This container is needed to position the front and back side */
-    .flip-card-inner {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        transition: transform 0.8s;
-        transform-style: preserve-3d;
-    }
-
-    /* Do an horizontal flip when you move the mouse over the flip box container */
-    .flip-card:hover .flip-card-inner {
-        transform: rotateY(180deg);
-    }
-
-    /* Position the front and back side */
-    .flip-card-front,
-    .flip-card-back {
-        border: solid 2px #212529;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        -webkit-backface-visibility: hidden;
-        /* Safari */
-        backface-visibility: hidden;
-    }
-
-    /* Style the front side (fallback if image is missing) */
-    .flip-card-front {
-        background-color: #6C757D;
-        color: #F8F9FA;
-    }
-
-    /* Style the back side */
-    .flip-card-back {
-        background-color: #F8F9FA;
-        color: #212529;
-        transform: rotateY(180deg);
-    }
-
-    /*----- EXPERIENCES CONTENT -----*/
-
-    .flip-card-front>h2 {
-        position: relative;
-        top: 20%;
-    }
-
-    .flip-card-front>h3 {
-        position: relative;
-        top: 20%;
-    }
-
-    .experience_btn {
-        background-color: #343A40;
-        font-weight: bold;
-        color: #F8F9FA;
-        width: 50%;
-        height: 5vh;
-        border-radius: 8px;
-        position: absolute;
-        bottom: 10%;
-        left: 25%;
-    }
-
     /*----- PROJET CONTENT -----*/
 
     .experience_content {
@@ -445,77 +363,6 @@
 
     .experience_content>img {
         text-align: center;
-    }
-
-    /*----- MATEX -----*/
-
-    .matex_logos>img {
-        width: 100%;
-    }
-
-    .roll_up_img {
-        width: 100%;
-    }
-
-    .depliants {
-        margin-bottom: 5vh;
-    }
-
-    .depliants>img {
-        width: 100%;
-        margin-top: 2.5vh;
-        margin-bottom: 2.5vh;
-    }
-
-    /*----- APPLI MOBILE -----*/
-
-    .maquettes {
-        width: 100%;
-        margin-bottom: 5%;
-    }
-
-    .maquette {
-        border: solid 3px #212529;
-        width: 100%;
-        margin-top: 2.5vh;
-        margin-bottom: 2.5vh;
-    }
-
-    /*----- INTEGRATION WEB -----*/
-
-    .integration_web {
-        text-align: center;
-        margin-bottom: 5vh;
-    }
-
-    .integration_web>img {
-        width: 90%;
-        box-shadow: 30px 10px 4px #212529;
-    }
-
-    /*----- PROJET TUTEURE -----*/
-
-    .projet_tuteure {
-        margin-bottom: 5vh;
-    }
-
-    .projet_tuteure>img {
-        width: 90%;
-        margin-top: 2.5vh;
-        margin-bottom: 2.5vh;
-        box-shadow: 30px 10px 4px #212529;
-    }
-
-    /*----- AFFICHES -----*/
-
-    .affiche {
-        text-align: center;
-    }
-
-    .affiche>img {
-        width: 90%;
-        filter: drop-shadow(30px 10px 4px #212529);
-        margin-bottom: 2.5vh;
     }
 
     /*----- Projets Mobiles ----- */
