--- a/style_desktop.css
+++ b/style_desktop.css
@@ -16,6 +16,7 @@
 
     h2 {
         font-size: 2em;
+        color: #212529;
     }
 
     p {
@@ -138,8 +139,9 @@
 
     .download_btn {
         text-align: center;
-        width: 100%;
+        width: 50%;
         top: 5vh;
+        border-radius: 5%;
     }
 
     /*----- BUTTON ANIMATION CV -----*/
@@ -255,6 +257,8 @@
     }
 
     .project {
+        text-decoration: none;
+        color: #212529;
         flex: 1 0 21%;
         text-align: center;
         align-content: center;
@@ -266,18 +270,12 @@
     }
 
     .project:hover {
-        cursor: pointer;
         box-shadow: 
         rgba(0, 0, 0, 0.25) 0px 54px 55px,
         rgba(0, 0, 0, 0.12) 0px -12px 30px,
         rgba(0, 0, 0, 0.12) 0px 4px 6px,
         rgba(0, 0, 0, 0.17) 0px 12px 13px,
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    }
-
-    .project>a {
-        text-decoration: none;
-        color: #212529;
     }
 
     .project>img {
@@ -291,12 +289,6 @@
         color: #212529;
     }
 
-    .project_content>h2 {
-        color: #212529;
-        text-align: center;
-        margin: 5%;
-    }
-
     .project_content_container {
         display: flex;
         align-items: center;
@@ -307,7 +299,7 @@
     }
 
     .project_content_img>img {
-        width: 80%;
+        width: 100%;
     }
 
     .project_content_text {
@@ -318,7 +310,12 @@
 
     .smartphone_container {
         width: 20%;
-        margin-left: 10%;
+    }
+
+    .project_content_smartphone_text {
+        width: 80%;
+        margin: 10vh;
+        text-align: justify;
     }
 
     .smartphone {
@@ -362,49 +359,12 @@
       
       /* The screen (or content) of the device */
       .smartphone .content {
-        width: 300px;
-        height: 550px;
         background: black;
       }
 
-    /*----- CONTACT -----*/
-
-    .contact {
-        width: 100%;
-        margin-bottom: 10%;
-    }
-
-    .contact>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
-    .contact>p {
-        padding-left: 5%;
-        color: #212529;
-    }
-
-    .contact>a>img {
-        width: 10%;
-        align-items: center;
-    }
-
-    .contacts {
-        width: 100%;
-        text-align: center;
-    }
-
-    .contacts>a>img {
-       width: 10%;
-       margin-top: 5%;
-       margin-left: 10%;
-       margin-right: 10%;
-    }
-
     /*----- FOOTER -----*/
     footer {
+        font-weight: bold;
         width: 100%;
         left: 0;
         bottom: 0;
@@ -416,4 +376,22 @@
         padding-bottom: 2%;
     }
 
+    .copyright {
+        padding-bottom: 2%;
+    }
+
+    .contacts {
+        display: flex;
+        margin-left: 45%;
+        margin-right: 45%;
+        justify-content: space-around;
+    }
+
+    .contact_icon {
+        width: 2vw;
+    }
+
+    .contact_icon>img {
+        width: 2vw;
+    }
 }
