--- a/style_mobile.css
+++ b/style_mobile.css
@@ -185,7 +185,7 @@
         background-color: #E9ECEF;
     }
 
-    .presentation_content>p {
+    .presentation_txt>p {
         color: #212529;
         padding-left: 5%;
         padding-right: 5%;
@@ -197,6 +197,10 @@
         top: 5vh;
         justify-content: center;
         display: flex;
+    }
+
+    .download_btn>a {
+        width: 80%;
     }
 
     /*----- BUTTON ANIMATION CV -----*/
@@ -313,6 +317,8 @@
     }
 
     .project {
+        text-decoration: none;
+        color: #212529;
         flex: 1 0 41%;
         text-align: center;
         align-content: center;
@@ -324,7 +330,6 @@
     }
 
     .project:hover {
-        cursor: pointer;
         box-shadow: 
         rgba(0, 0, 0, 0.25) 0px 54px 55px,
         rgba(0, 0, 0, 0.12) 0px -12px 30px,
@@ -333,39 +338,41 @@
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
 
-    .project>a {
-        text-decoration: none;
-        color: #212529;
-    }
-
     .project>img {
         width: 30%;
     }
 
     /*----- PROJET CONTENT -----*/
 
-    .experience_content {
-        padding-top: 15vh;
-        padding-left: 5%;
-        padding-right: 5%;
+    .project_content {
+        padding: 5%;
         color: #212529;
     }
 
-    .experience_content>h2 {
-        color: #212529;
-        text-align: center;
-        margin: 5%;
+    .project_content>h1 {
+        margin-top: 15vh;
     }
 
-    .experience_content>p {
+    .project_content_img {
+        width: 100%;
+    }
+
+    .project_content_img>img {
+        width: 100%;
+    }
+
+    .project_content_text {
+        width: 100%;
         text-align: justify;
     }
 
-    .experience_content>img {
-        text-align: center;
+    .smartphone_container {
+        width: 20%;
     }
 
-    /*----- Projets Mobiles ----- */
+    .project_content_smartphone_text {
+        text-align: justify;
+    }
 
     .smartphone {
         position: relative;
@@ -413,44 +420,9 @@
         background: black;
       }
 
-    /*----- CONTACT -----*/
-
-    .contact {
-        width: 100%;
-        margin-bottom: 10%;
-    }
-
-    .contact>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
-    .contact>p {
-        padding-left: 5%;
-        color: #212529;
-    }
-
-    .contact>a>img {
-        width: 10%;
-        align-items: center;
-    }
-
-    .contacts {
-        width: 100%;
-        text-align: center;
-    }
-
-    .contacts>a>img {
-       width: 10%;
-       margin-top: 5%;
-       margin-left: 10%;
-       margin-right: 10%;
-    }
-
     /*----- FOOTER -----*/
     footer {
+        font-weight: bold;
         width: 100%;
         left: 0;
         bottom: 0;
@@ -458,7 +430,28 @@
         color: #F8F9FA;
         font-size: 1em;
         text-align: center;
-        padding: 2%;
+        margin-top: 5vh;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+    }
+
+    .copyright {
+        padding-bottom: 2%;
+    }
+
+    .contacts {
+        display: flex;
+        margin-left: 30%;
+        margin-right: 30%;
+        justify-content: space-around;
+    }
+
+    .contact_icon {
+        width: 5vw;
+    }
+
+    .contact_icon>img {
+        width: 5vw;
     }
 
 }
