--- a/style_tablet.css
+++ b/style_tablet.css
@@ -314,6 +314,8 @@
     }
 
     .project {
+        text-decoration: none;
+        color: #212529;
         flex: 1 0 21%;
         text-align: center;
         align-content: center;
@@ -325,18 +327,12 @@
     }
 
     .project:hover {
-        cursor: pointer;
         box-shadow: 
         rgba(0, 0, 0, 0.25) 0px 54px 55px,
         rgba(0, 0, 0, 0.12) 0px -12px 30px,
         rgba(0, 0, 0, 0.12) 0px 4px 6px,
         rgba(0, 0, 0, 0.17) 0px 12px 13px,
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    }
-
-    .project>a {
-        text-decoration: none;
-        color: #212529;
     }
 
     .project>img {
@@ -414,42 +410,6 @@
         background: black;
       }
 
-    /*----- CONTACT -----*/
-
-    .contact {
-        width: 100%;
-        margin-bottom: 10%;
-    }
-
-    .contact>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
-    .contact>p {
-        padding-left: 5%;
-        color: #212529;
-    }
-
-    .contact>a>img {
-        width: 10%;
-        align-items: center;
-    }
-
-    .contacts {
-        width: 100%;
-        text-align: center;
-    }
-
-    .contacts>a>img {
-       width: 10%;
-       margin-top: 5%;
-       margin-left: 10%;
-       margin-right: 10%;
-    }
-
     /*----- FOOTER -----*/
     footer {
         width: 100%;
@@ -459,7 +419,27 @@
         color: #F8F9FA;
         font-size: 1em;
         text-align: center;
-        padding: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .copyright {
+        padding-bottom: 2%;
+    }
+
+    .contacts {
+        display: flex;
+        margin-left: 30%;
+        margin-right: 30%;
+        justify-content: space-around;
+    }
+
+    .contact_icon {
+        width: 2vw;
+    }
+
+    .contact_icon>img {
+        width: 2vw;
     }
 
 }
