--- a/style_tablet.css
+++ b/style_tablet.css
@@ -341,28 +341,43 @@
 
     /*----- PROJET CONTENT -----*/
 
-    .experience_content {
-        padding-top: 15vh;
-        padding-left: 5%;
-        padding-right: 5%;
+    .project_content {
+        padding: 5%;
         color: #212529;
     }
 
-    .experience_content>h2 {
-        color: #212529;
-        text-align: center;
-        margin: 5%;
+    .project_content>h1 {
+        margin-top: 15vh;
     }
 
-    .experience_content>p {
+    .project_content_container {
+        display: flex;
+        align-items: center;
+    }
+
+    .project_content_img {
+        width: 50%;
+    }
+
+    .project_content_img>img {
+        width: 100%;
+    }
+
+    .project_content_text {
+        width: 50%;
+        margin-left: 10%;
         text-align: justify;
     }
 
-    .experience_content>img {
-        text-align: center;
+    .smartphone_container {
+        width: 20%;
     }
 
-    /*----- Projets Mobiles ----- */
+    .project_content_smartphone_text {
+        width: 80%;
+        margin-left: 40%;
+        text-align: justify;
+    }
 
     .smartphone {
         position: relative;
@@ -405,8 +420,6 @@
       
       /* The screen (or content) of the device */
       .smartphone .content {
-        width: 300px;
-        height: 550px;
         background: black;
       }
 
