--- a/style_desktop.css
+++ b/style_desktop.css
@@ -12,15 +12,18 @@
 
     h1 {
         font-size: 3em;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     h2 {
         font-size: 2em;
         color: #212529;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     p {
         font-size: 1.5em;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     /*----- BARRE DE NAVIGATION -----*/
@@ -364,6 +367,7 @@
 
     /*----- FOOTER -----*/
     footer {
+        font-family: Arial, Helvetica, sans-serif;
         font-weight: bold;
         width: 100%;
         left: 0;
