--- a/style_mobile.css
+++ b/style_mobile.css
@@ -11,14 +11,17 @@
 
     h1 {
         font-size: 2em;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     h2 {
         font-size: 1.5em;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     p {
         font-size: 1em;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     /*----- BARRE DE NAVIGATION -----*/
@@ -424,6 +427,7 @@
 
     /*----- FOOTER -----*/
     footer {
+        font-family: Arial, Helvetica, sans-serif;
         font-weight: bold;
         width: 100%;
         left: 0;
