--- a/style_desktop.css
+++ b/style_desktop.css
@@ -26,6 +26,10 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
+    a {
+        font-family: Arial, Helvetica, sans-serif; 
+    }
+
     /*----- BARRE DE NAVIGATION -----*/
 
     nav {
