--- a/style_tablet.css
+++ b/style_tablet.css
@@ -24,6 +24,10 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
+    a {
+        font-family: Arial, Helvetica, sans-serif; 
+    }
+
     /*----- BARRE DE NAVIGATION -----*/
 
     nav {
