FIX presentation_txt + arrow size

--- a/style_tablet.css
+++ b/style_tablet.css
@@ -191,7 +191,7 @@
         background-color: #E9ECEF;
     }
 
-    .presentation_content>p {
+    .presentation_txt>p {
         color: #212529;
         padding-left: 5%;
         padding-right: 5%;
