--- a/style_tablet.css
+++ b/style_tablet.css
@@ -28,6 +28,34 @@
         font-family: Arial, Helvetica, sans-serif; 
     }
 
+      /*----- SLIDE ANIMATIONS -----*/
+
+      .slide-in-from-left {
+        animation: 1.5s ease-out 0s 1 slideInFromLeft forwards;
+    }
+      
+    @keyframes slideInFromLeft {
+        0% {
+          transform: translateX(-50%);
+        }
+        100% {
+          transform: translateX(0);
+        }
+    }
+
+    .slide-in-from-right {
+        animation: 1.5s ease-out 0s 1 slideInFromRight forwards;
+    }
+      
+    @keyframes slideInFromRight {
+        0% {
+          transform: translateX(50%);
+        }
+        100% {
+          transform: translateX(0);
+        }
+    }
+
     /*----- BARRE DE NAVIGATION -----*/
 
     nav {
