ADD opacity anim

--- a/style_desktop.css
+++ b/style_desktop.css
@@ -39,9 +39,11 @@
     @keyframes slideInFromLeft {
         0% {
           transform: translateX(-50%);
+          opacity: 0%;
         }
         100% {
           transform: translateX(0);
+          opacity: 100%;
         }
     }
 
@@ -52,9 +54,11 @@
     @keyframes slideInFromRight {
         0% {
           transform: translateX(50%);
+          opacity: 0%;
         }
         100% {
           transform: translateX(0);
+          opacity: 100%;
         }
     }
 
