--- a/style_mobile.css
+++ b/style_mobile.css
@@ -227,65 +227,34 @@
         text-align: justify;
     }
 
-    .download_btn {
-        width: 100%;
-        top: 5vh;
-        justify-content: center;
+     /*----- DOWNLOAD BUTTON -----*/
+
+     .download_btn {
+        margin-top: 10vh;
         display: flex;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 
     .download_btn>a {
-        width: 80%;
-    }
-
-    /*----- BUTTON ANIMATION CV -----*/
-
-    .wrapper {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .download_btn a {
-        text-align: center;
-        display: block;
-        height: 40px;
-        line-height: 40px;
-        font-size: 18px;
-        font-family: sans-serif;
-        text-decoration: none;
-        color: #212529;
-        border: 2px solid #343A40;
-        letter-spacing: 2px;
-        text-align: center;
-        position: relative;
-        transition: all .35s;
-        text-transform: uppercase;
-    }
-
-    .download_btn a span {
-        position: relative;
-        z-index: 1;
-    }
-
-    .download_btn a:after {
-        position: absolute;
-        content: "";
-        top: 0;
-        left: 0;
-        width: 0;
-        height: 100%;
-        background: #027DFD;
-        transition: all .35s;
-    }
-
-    .download_btn a:hover {
-        color: #F8F9FA;
-    }
-
-    .download_btn a:hover:after {
         width: 100%;
+        padding: 2vh;
+        border-radius: 100px;
+        text-align: center;
+        transition: 0.5s;
+        text-decoration: none;
+        text-transform: uppercase;
+        background-color: #0553B1;;
+        color: #DEE2E6;
+        border: 1px solid #0553B1;
+    }
+
+    .download_btn>a:hover {
+        transition: 0.5s;
+        border-radius: 100px;
+        background-color: #E9ECEF;
+        border: 1px solid #0553B1;
+        color: #0553B1;
     }
 
     /*----- COMPETENCES -----*/
