--- a/style_desktop.css
+++ b/style_desktop.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 1024px) {
 
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
     html {
         scroll-behavior: smooth;
     }
