--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 767px) {
 
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
     html {
         scroll-behavior: smooth;
     }
