--- a/style_tablet.css
+++ b/style_tablet.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
     html {
         scroll-behavior: smooth;
     }
