--- a/style_mobile.css
+++ b/style_mobile.css
@@ -31,16 +31,8 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    p {
+    p,a,span {
         font-size: 1em;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    a {
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    span {
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -254,6 +246,7 @@
         background-color: #0553B1;;
         color: #DEE2E6;
         border: 1px solid #0553B1;
+        user-select: none;
     }
 
     .download_btn>a:hover {
@@ -323,7 +316,6 @@
 
     .skill_box>img {
         width: 50px;
-        height: 50px;
     }
 
     .skill_box:hover {
@@ -419,7 +411,7 @@
 
     .project_details {
         width: 100%;
-        margin-left: 2%;
+        margin-bottom: 5vh;
     }
 
     .project_label {
@@ -427,12 +419,10 @@
     }
 
     .project_label>span {
-        width: 50%;
-        background-color: #0553B1;
+        background-color: #DEE2E6;
         border-radius: 10px;
-        color: white;
-        padding: 2%;
-        font-weight: bold;
+        color: #212529;
+        padding: 1% 2% 1% 2%;
     }
 
     .project_desc {
@@ -462,6 +452,7 @@
         color: #DEE2E6;
         border: 1px solid #0553B1;
         font-weight: bold;
+        user-select: none;
     }
 
     .project_more>a:hover {
@@ -470,6 +461,22 @@
         background-color: whitesmoke;
         border: 1px solid #0553B1;
         color: #0553B1;
+    }
+
+    .hidden_projects_btn_container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .hidden_projects_btn_container>a {
+        width: 50%;
+    }
+
+    .hidden_projects_btn {
+        width: 100%;
+        cursor: pointer;
+        user-select: none;
     }
 
     /*.project_img>img {
