--- a/style_tablet.css
+++ b/style_tablet.css
@@ -31,16 +31,8 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    p {
-        font-size: 1.5em;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    a {
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    span {
+    p,a,span{
+        font-size: 1em;
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -253,6 +245,7 @@
         background-color: #0553B1;;
         color: #DEE2E6;
         border: 1px solid #0553B1;
+        user-select: none;
     }
 
     .download_btn>a:hover {
@@ -322,7 +315,6 @@
 
     .skill_box>img {
         width: 50px;
-        height: 50px;
     }
 
     .skill_box:hover {
@@ -418,7 +410,7 @@
 
     .project_details {
         width: 100%;
-        margin-left: 2%;
+        margin-bottom: 5vh;
     }
 
     .project_label {
@@ -426,12 +418,10 @@
     }
 
     .project_label>span {
-        width: 50%;
-        background-color: #0553B1;
+        background-color: #DEE2E6;
         border-radius: 10px;
-        color: white;
-        padding: 2%;
-        font-weight: bold;
+        color: #212529;
+        padding: 1% 2% 1% 2%;
     }
 
     .project_desc {
@@ -461,6 +451,7 @@
         color: #DEE2E6;
         border: 1px solid #0553B1;
         font-weight: bold;
+        user-select: none;
     }
 
     .project_more>a:hover {
@@ -469,6 +460,21 @@
         background-color: whitesmoke;
         border: 1px solid #0553B1;
         color: #0553B1;
+    }
+
+    .hidden_projects_btn_container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .hidden_projects_btn_container>a {
+        width: 50%;
+    }
+
+    .hidden_projects_btn {
+        cursor: pointer;
+        user-select: none;
     }
 
     /*.project_img>img {
