--- a/style_mobile.css
+++ b/style_mobile.css
@@ -320,7 +320,7 @@
     }
 
     .skill_box:hover {
-        animation: pop 0.3s linear 1;
+        animation: skill_pop 0.3s linear 1;
     }
 
     .skill_box_tooltip {
@@ -360,7 +360,7 @@
         }
     }
 
-    @keyframes pop {
+    @keyframes skill_pop {
         50%  {transform: scale(1.2);}
     }
     
@@ -405,6 +405,47 @@
         width: 30%;
     }*/
 
+    /*----- MES EXPERIENCES -----*/
+
+    .experiences_container {
+        width: 100%;
+        justify-content: center;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+    }
+
+    .line {
+        display: none;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .experience_box {
+        height: 40vh;
+        margin: 2%;
+        background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
+        border-radius: 10px;
+    }
+
+    .experience_title {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 2%;
+        font-weight: bold;
+        font-size: 2em;
+    }
+
+    .experience_subtitle {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 1%;
+        font-weight: bold;
+        font-size: 1.5em;
+    }
+
      /*----- MES PROJETS -----*/
 
      .projects_list {
@@ -419,7 +460,7 @@
         justify-content: center;
     }
 
-    @keyframes pop {
+    @keyframes project_pop {
         0%  {
             transform: scale(0.5);
             opacity: 0%;
@@ -431,7 +472,7 @@
     }
 
     .pop_animation {
-        animation: pop 0.5s linear 1;
+        animation: project_pop 0.5s linear 1;
     }
 
     .project_box {
