--- a/style_tablet.css
+++ b/style_tablet.css
@@ -435,6 +435,7 @@
     }
 
     .experience_box {
+        align-content: center;
         width: 700px;
         height: 40vh;
         padding: 2%;
@@ -452,9 +453,19 @@
         margin-top: 80vh;
     }
 
+    .experience_header {
+        display: flex;
+        width: 100%;
+        margin: 2%;
+        justify-content: space-between;
+    }
+
+    .experience_header img {
+        height: 10vh;
+    }
+
     .experience_title {
         width: 100%;
-        text-align: center;
         margin-bottom: 2%;
         font-weight: bold;
         font-size: 2em;
@@ -466,6 +477,11 @@
         margin-bottom: 1%;
         font-weight: bold;
         font-size: 1.5em;
+    }
+
+    .experience_desc {
+        margin: 2%;
+        text-align: justify;
     }
 
      /*----- MES PROJETS -----*/
@@ -557,8 +573,8 @@
         width: 20%;
         padding-top: 1%;
         padding-bottom: 1%;
-        padding-left: 4%;
-        padding-right: 4%;
+        padding-left: 15%;
+        padding-right: 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
