--- a/style_desktop.css
+++ b/style_desktop.css
@@ -14,7 +14,6 @@
 
     h1 {
         font-weight: bold;
-        text-transform: uppercase;
         margin: 0;
         color: #212529;
         padding-top: 15vh;
@@ -125,55 +124,77 @@
     /*----- HEADER -----*/
 
     header {
-        background-image: url('annexes/Wave.svg');
+        background-image: url('annexes/background.png');
         height: 100vh;
         background-repeat: no-repeat;
         background-position: left top;
         background-size: cover;
+        align-content: center;
     }
 
     .title {
         color: #212529;
         font-size: 2em;
         text-align: center;
-        padding-top: 20%;
-    }
-
-    .title>h1 {
-        padding: 0;
-    }
-
-    .title>h2 {
-        font-weight: lighter;
     }
 
     .title>a {
-        text-decoration: none;
-        font-size: 2em;
+        text-decoration: none;  
         color: #212529;
+    }
+
+    .title svg {
+        height: 8vh;
+    }
+
+    .title svg:hover {
+        color: #0553B1;
     }
 
     /*----- PRESENTATION -----*/
 
+    .presentation {
+        padding-bottom: 20vh;
+        background-color: rgb(255 255 255);
+    }
+
     .presentation_content {
         display: flex;
+        align-items: center;
+        justify-content: center;
         padding-top: 5%;
+        gap: 3em;
+    }
+
+    .avatar_container {
+        width: 30%;
     }
 
     .avatar {
-        margin-left: 5%;
+        /*margin-left: 20%;*/
         width: 500px;
         height: 500px;
-        border-radius: 5%;
-        border: 2px solid #212529;
+        border-radius: 50%;
+        /*border: 2px solid #212529;*/
+        border: 5px solid #0553B1;
         background-color: #E9ECEF;
+        box-shadow: 
+        rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px,
+        rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px,
+        rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+
+    .presentation_txt_container {
+        width: 30%;
     }
 
     .presentation_txt {
         font-size: 1em;
         color: #212529;
-        padding-left: 5%;
-        padding-right: 5%;
+        /*margin-left: 10%;
+        padding-right: 30%;*/
         text-align: justify;
     }   
 
@@ -193,7 +214,7 @@
         transition: 0.5s;
         text-decoration: none;
         text-transform: uppercase;
-        background-color: #0553B1;;
+        background-color: #0553B1;
         color: #DEE2E6;
         border: 1px solid #0553B1;
         user-select: none;
@@ -300,7 +321,7 @@
 
     .skill_box_tooltip:hover .tooltiptext {
         visibility: visible;
-        animation: 1.0s ease-out 0s 1 slideInFromTop forwards;
+        animation: 0.3s ease-out 0s 1 slideInFromTop forwards;
     }
       
     @keyframes slideInFromTop {
@@ -318,7 +339,11 @@
         50%  {transform: scale(1.2);}
     }
 
-    /*----- MES EXPERIENCES -----*/
+    /*----- EXPERIENCES -----*/
+
+    .experiences {
+        margin-bottom: 10vh;
+    }
 
     .experiences_container {
         width: 100%;
@@ -386,7 +411,7 @@
         font-size: 1.5em;
     }
 
-    /*----- MES PROJETS -----*/
+    /*----- PROJETS -----*/
 
     .projects_list {
         width: 100%;
@@ -480,7 +505,7 @@
         transition: 0.5s;
         text-decoration: none;
         text-transform: uppercase;
-        background-color: #0553B1;;
+        background-color: #0553B1;
         color: #DEE2E6;
         border: 1px solid #0553B1;
         font-weight: bold;
@@ -517,9 +542,9 @@
         color: #212529;
     }
 
-    .project_content>h1,h2 {
+    /*.project_content>h1,h2 {
         font-family: Arial, Helvetica, sans-serif;
-    }
+    }*/
 
     .project_content_container {
         display: flex;
