FIX experiences heigh

--- a/style_tablet.css
+++ b/style_tablet.css
@@ -410,7 +410,7 @@
     .experience_box {
         align-content: center;
         width: 700px;
-        height: 40vh;
+        height: 80%;
         padding: 2%;
         margin: 2%;
         background-color: whitesmoke;
