--- a/style_mobile.css
+++ b/style_mobile.css
@@ -395,7 +395,7 @@
 
     .experience_box {
         align-content: center;
-        height: 40vh;
+        height: 80%;
         margin: 5%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px #0000002e;
