--- a/style_desktop.css
+++ b/style_desktop.css
@@ -371,7 +371,7 @@
 
     .experience_box {
         width: 700px;
-        height: 30vh;
+        height: 40vh;
         padding: 2%;
         margin: 2%;
         background-color: whitesmoke;
@@ -483,6 +483,8 @@
         color: #212529;
         padding: 1% 2% 1% 2%;
         margin-right: 1%;
+        box-shadow: 0 3px 5px #0000002e;
+        font-weight: bold;
     }
 
     .project_desc {
@@ -496,10 +498,7 @@
 
     .project_more>a {
         width: 20%;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        padding-left: 4%;
-        padding-right: 4%;
+        padding: 1% 4% 1% 4%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
