--- a/style_tablet.css
+++ b/style_tablet.css
@@ -410,7 +410,7 @@
     .experience_box {
         align-content: center;
         width: 700px;
-        height: 80%;
+        height: 40vh;
         padding: 2%;
         margin: 2%;
         background-color: whitesmoke;
@@ -512,6 +512,9 @@
 
     .project_label {
         width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 1em;
     }
 
     .project_label>span {
@@ -519,6 +522,8 @@
         border-radius: 10px;
         color: #212529;
         padding: 1% 2% 1% 2%;
+        box-shadow: 0 3px 5px #0000002e;
+        font-weight: bold;
     }
 
     .project_desc {
@@ -535,10 +540,7 @@
 
     .project_more>a {
         width: 20%;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        padding-left: 15%;
-        padding-right: 15%;
+        padding: 3% 15% 3% 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
