ADD skill pop animation with delay

--- a/style_desktop.css
+++ b/style_desktop.css
@@ -262,6 +262,14 @@
         animation: skill_pop 0.3s linear 1;
     }
 
+    :root {
+        --pop-delay: 0.0s;
+    }
+
+    .skill_pop_animation {
+        animation: skill_pop 0.3s linear 1;
+    }
+
     .skills_container {
         display: flex;
         flex-wrap: wrap;
@@ -288,10 +296,6 @@
 
     .skill_box>img {
         width: 50px;
-    }
-
-    .skill_box:hover {
-        animation: skill_pop 0.3s linear 1;
     }
 
     .skill_box_tooltip {
