--- a/style_tablet.css
+++ b/style_tablet.css
@@ -36,6 +36,10 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
+    a,span {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
       /*----- SLIDE ANIMATIONS -----*/
 
       .slide-in-from-left {
