--- a/style_desktop.css
+++ b/style_desktop.css
@@ -10,6 +10,7 @@
         height: 100%;
         margin: 0;
         background-color: #DEE2E6;
+        user-select: none;
     }
 
     h1 {
@@ -210,7 +211,6 @@
         background-color: #0553B1;
         color: #DEE2E6;
         border: 1px solid #0553B1;
-        user-select: none;
     }
 
     .download_btn>a:hover {
@@ -246,7 +246,6 @@
         color: #F8F9FA;
         border-radius: 100px;
         cursor: pointer;
-        user-select: none;
     }
 
     .skills_toggle_select {
@@ -505,7 +504,6 @@
         color: #DEE2E6;
         border: 1px solid #0553B1;
         font-weight: bold;
-        user-select: none;
     }
 
     .project_more>a:hover {
@@ -528,7 +526,6 @@
 
     .hidden_projects_btn {
         cursor: pointer;
-        user-select: none;
     }
 
     /*----- PROJET CONTENT -----*/
@@ -540,30 +537,23 @@
 
     .project_content_container {
         display: flex;
-        align-items: center;
+        gap: 5em;
     }
 
     .project_content_img {
-        width: 50%;
+        height: 100%;
+        margin-top: 10%;
     }
 
     .project_content_img>img {
-        width: 50%;
+        width: 100%;
     }
 
     .project_content_text {
-        width: 50%;
-        margin-left: 10%;
         text-align: justify;
     }
 
-    .smartphone_container {
-        width: 20%;
-    }
-
     .project_content_smartphone_text {
-        width: 80%;
-        margin-left: 25%;
         text-align: justify;
     }
 
